OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.3

New features:
- 235 Named entity recognition
- 234: Free text submission to MoreLikeThis query
- 233 Add deletion support in XML indexation
- 232: FTP feed XML task
- 231: Autocompletion API
- 3558600: Dropbox indexation
- 3553610: Group all token filter
- 3553517: Squared Geographical Filter
- 3553052: Json Path filter
- 3549350: Degrees to radians converter
- 3549257: A delete all feature
- 3548884: A flush crawl cache scheduler task
- 3548287: Disable Meta NoIndex on HTML parser
- 3546276: Dailymotion and Vimeo API support
- 3545447: Youtube API support
- 3539147: URL and FILE database scheduler task
- 3539146: Tag boost in HTML parser	
- 3539144: A number format filter	
- 3537132: JBIG2 format support for PDF text extraction
- 3535780: Classifier feature
- 3535777: SOAP WebService
- 3523453: Image Parser with OCR
- 3519206: XSL support on XML upload
- 3510432: Support of Arabic language
- 3512267: OCR Integration
- 3509336: Adding regular expression capture in parser	
- 3485668: Jsoup HTML parser
- 3471808: Consecutive duplicate characters filter
- 3467459: Phonetic filters
- 3467437: A filter to extract the domain information
- 3466448: Multiple OpenSearchServer instances on one Tomcat server
- 3466447: Adding NumDeletedDocs in Runtime/Index
- 3422180: Upgrade to ZK 5.0.10
- 3417863: Upgrade Tomcat to version 6.0.35
- 3421240: JSON response for OpenSearchServer
- 3386107: OpenSearch Standards

OpenSearchServer 1.2.4

New features:
- 3527810: Removing fragment in URL
- 3518687: URL normalization required in the Web crawler
- 3510598: Add CSV format in the select XML/HTTP API
- 3498421: Set a default URL value for replication
- 3498373: Remove script and object tag content in db crawler
- 3495004: Add progress info in scheduler task	